Fix question image spacing

--- a/app/assets/stylesheets/layout/_question-image.css.scss
+++ b/app/assets/stylesheets/layout/_question-image.css.scss
@@ -1,26 +1,24 @@
-.l-question-text {
-  &.l-design {
-    .btn {
-      margin: 0 5px 6px 0;
-    }
+.l-design {
+  .btn {
+    margin: 0 5px 6px 0;
+  }
 
-    input[type="file"] {
-      $margin: 8px;
-      height: 38px - $margin;
-      margin-top: $margin;
-      line-height: inherit;
-    }
+  input[type="file"] {
+    $margin: 8px;
+    height: 38px - $margin;
+    margin-top: $margin;
+    line-height: inherit;
+  }
 
-    .image-preview {
-      margin-bottom: $baseLineHeight/2;
-      max-height: 250px;
-    }
+  .image-preview {
+    margin-bottom: $baseLineHeight/2;
+    max-height: 250px;
+  }
 
-    .image_question_image_file,
-    .image_question_image_url {
-      .js & {
-        display: none;
-      }
+  .image_question_image_file,
+  .image_question_image_url {
+    .js & {
+      display: none;
     }
   }
 }
